# tiny-agent-skills

./: .env.example  .gitignore  README.md  hierarchical_skill_routing_1.md  pyproject.toml  requirements.txt  tiny-claude-skills-proposal-v2.md
config/pipelines/: fact_check.yaml
script/: build_llama.sbatch  download_qwen3vl.bat  download_qwen3vl.sh  run_qwen3vl_server.bat  run_qwen3vl_server.sh  run_tests.py  setup_llama_cpp.bat  slurm_job.sbatch
src/agent/: __main__.py  llm_client.py  pipeline.py
src/agent/data/: paper_dev.py
src/agent/skills/: llm_skills.py
src/dag/: README.md  __init__.py  __main__.py  llm_client.py  pipeline.py
src/dag/data/: __init__.py  paper_dev.py
src/dag/skills/: __init__.py  llm_skills.py
src/fsm-based-method/: .env.example  README.md  __init__.py  api.py  fever_runner.py  fsm.py  guardrail.py  orchestrator.py  policy.py  state.py
src/fsm-based-method/skills/: __init__.py  claim-decomposer.md  claim-normalizer.md  evidence-filter.md  evidence-query-planner.md  evidence-stance-scorer.md  fsm-transition-decider.md  registry.py  response-composer.md  tool-request-composer.md  verdict-aggregator.md
src/fsm-based-method/tools/: claim_decompose.py  claim_normalize.py  evidence_query_plan.py  generic.example.java  kb_lookup.py  nli_score.py  output_verify.py  page_fetch.py  response_compose.py  search.py  sentence_extract.py  tool_request_compose.py  verdict_aggregate.py  web_search.py
src/react-based-method/: readme.md  run_skill.py  run_skill_fever_eval.py  tool_registry.py  tools.py  wikienv.py  wrappers.py
(+18 files in other folders)
