[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [{ name = "NTU 2026 Spring AI6130 Group 1" }]
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "instructor>=1.0.0",
  "llama-cpp-python>=0.2.0",
  "transformers>=4.51.0",
  "accelerate>=1.12.0",
  "huggingface-hub[cli]>=1.3.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "hypothesis>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
